--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
 
     <ProgressBar
         android:id="@+id/progressbar"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        style="?android:attr/progressBarStyle"/>
+        android:visibility="visible" />
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
